[package]
name = "rswal"
version = "0.1.0"
authors = ["mato"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-rs = { version="0.2.0", features= ["use_async-std"] }
async-trait = "0.1.22"
async-std = { version = "1.4.0", features = ["attributes"] }
futures = { version = "0.3.1", features = ["io-compat"] }
